[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.25.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.2",
    "mcp[cli]>=1.11.0",
    "python-dotenv>=1.1.1",
]
